# CaveBridge

./: .dockerignore  .gitignore  Dockerfile  Makefile  NEWS.adoc  README.md  README.zh.md  actions.c  advent.h  adventure.yaml  cheat.c  editline_shim.h  main.c  misc.c  pyproject.toml
.github/workflows/: ci.yml  release.yml
cavebridge/: __main__.py  config.py  diag.py  engine.py  guide.py  hints.py  llm.py  narrator.py  parser.py  repl.py  saves.py  settings.py  state.py  vocab.py
packaging/: cavebridge_entry.py
tests_cavebridge/: __init__.py  test_config.py  test_e2e.py  test_engine.py  test_guide.py  test_hints.py  test_llm.py  test_narrator.py  test_parser.py  test_repl.py  test_saves.py  test_settings.py  test_state.py  test_vocab.py
